use Long.valueOf